# photo_condenser

./: .bumpversion.cfg  README.md  README.rst  __init__.py  __main__.py  image_comparator.py  image_data.py  pyproject.toml  requirements.txt
photo_condenser/: __init__.py  __main__.py  app_controller.py  image_comparator.py  image_data.py  model.py
photo_condenser/ui/: __init__.py  main_window.py
photo_condenser/ui/components/: __init__.py
photo_condenser/ui/views/: landscape_view.py  loading_view.py  portrait_view.py
ui/: __init__.py  main_window.py
